<resources>
    <string name="app_name">News App</string>
    <string name="hint">Enter a message...</string>
    <string name="button">Send message</string>
    <string name="noEmail">No email app</string>
    <string name="activity_not_found_ex">There is no apps</string>
    <string name="text1">Automation tester</string>
    <string name="text2">C++ teacher</string>
    <string name="text3">God of guitar</string>
    <string name="text4">Mikhail was born in an ordinary Moscow family. As a child he liked music and computers. For 2 years of his musical career, he managed to visit the following bands: Metallica, RHCP, Queen, AC / DC. At the age of 20 he gathered his musical group. They quickly became famous. Mikhail had everything: fame, money, women. But one day he suffered an index finger injury and on this his career ended. But he did not give up and his goal was to build a career as a programmer (Android). Now he works as a automation tester and teaches at MPEI. At the moment, he has financial problems, since he is saving money for an operation to reduce the penis. Doctors said that living with 35 cm is dangerous for health. Mikhail goes forward to his goal and never gives up. Mikhail the good fellow. Be like Mikhail.</string>
    <string name="menu_action_switch">About</string>
    <string name="textIntro">Welcome</string>
</resources>
